Squashed alpha-1.5.1-pre05
commit d2ba5aaa3c8737c133a251e04f68e78cb28829cb
Merge: 3855e78 b3919d8
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Nov 24 20:19:11 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 3855e78438a470dafdedd0fd41bc2d0b08cd5a18
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Nov 24 20:15:39 2015 +0100

    Hexagon shape

commit 7413b38b0602abd7c3e47eacf543340122c820e8
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Nov 24 19:14:09 2015 +0100

    Circle shape improvements

commit 8f21a73aaaa74cae36fb420d30a8df3ebab9799c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Nov 24 16:58:50 2015 +0100

    Fix zoomed max width

commit 2d19e5d5f83bea726ff338fad877b4f252ed8d99
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Nov 24 16:33:44 2015 +0100

    Update node widths from update part, not from layout

commit e1f156f15b40c4c108ca25ce45eca1c5ba634f18
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Nov 24 16:22:06 2015 +0100

    refactor : save maximumWidth and minimumWidth in ZoomableLabel

commit b3919d84922187292d59c2a7340033c63cadf04e
Author: Predrag Cuklin <pcuklin@gmail.com>
Date:   Tue Nov 24 16:17:47 2015 +0100

    Translated using Weblate (Croatian)

    Currently translated at 100.0% (1847 of 1847 strings)

commit ec1204ab115a874d074186479ef214a1b0ac4f85
Merge: c217c4c 6f5f253
Author: Weblate <noreply@weblate.org>
Date:   Tue Nov 24 12:27:59 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit c217c4c54f463f957891e3551c6828d94392a634
Author: hokorobi <hokorobi.hokorobi@gmail.com>
Date:   Mon Nov 23 09:18:19 2015 +0100

    Translated using Weblate (Japanese)

    Currently translated at 99.5% (1839 of 1847 strings)

commit 2671e2e375231a6a0bfca9968c29848ccc1d6b42
Author: János Néhrer <iiamnot@gmail.com>
Date:   Sun Nov 22 23:28:23 2015 +0100

    Translated using Weblate (Hungarian)

    Currently translated at 98.9

--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -871,7 +871,11 @@ NodeListAction.tooltip=Rechercher et remplacer le texte des n\u0153uds (les n\u0
 NodeShapeAction.bubble.text=Bulle
 NodeShapeAction.circle.text=Cercle
 NodeShapeAction.fork.text=Fourche
+NodeShapeAction.narrow_hexagon.text=Hexagone ajust\u00E9
+NodeShapeAction.oval.text=Ovale
 NodeShapeAction.small_bubble.text=Petite bulle
+NodeShapeAction.small_wide_hexagon.text=Petit hexagone
+NodeShapeAction.wide_hexagon.text=Grand hexagone
 NodeUpAction.text=D\u00E9placer le n\u0153ud vers le haut
 nonboldify_branch=Supprimer le gras pour la branche
 nonitalicise_branch=Supprimer l'italique pour la branche
@@ -1094,6 +1098,7 @@ OptionPanel.max_shortened_text_length=Largeur utilis\u00E9e pour r\u00E9sumer le
 OptionPanel.metal=M\u00E9tal
 OptionPanel.min_node_width=Largeur minimale des n\u0153uds
 OptionPanel.motif=Motif
+OptionPanel.narrow_hexagon=Hexagone ajust\u00E9
 OptionPanel.nb=Norv\u00E9gien
 OptionPanel.never_save_folding=Jamais
 OptionPanel.nl=N\u00E9erlandais
@@ -1128,6 +1133,7 @@ OptionPanel.org.freeplane.plugin.bugreport.denied=Ne jamais envoyer
 OptionPanel.org.freeplane.plugin.bugreport.userid=Identifiant \u00E0 ajouter au rapport (optionnel)
 OptionPanel.outline_hgap=Distance horizontale
 OptionPanel.outline_vgap=Distance verticale
+OptionPanel.oval=Ovale
 OptionPanel.paint_connectors_behind=Passer les connecteurs sous les noeuds
 OptionPanel.parse_data=D\u00E9tecter la saisie de nombres et de dates
 OptionPanel.parse_data.tooltip=<html>D\u00E9tecter les nombres et dates et les formater automatiquement.<br>Exemples : 1 002,33 ou 31/12 ou 31/12/99 ou 31-12-1999 ou 31-12-1999 23:59
@@ -1267,6 +1273,7 @@ OptionPanel.sk=Slovaque
 OptionPanel.sl=Slov\u00E8ne
 OptionPanel.slow_scroll_selected_node=D\u00E9filement doux jusqu'au n\u0153ud s\u00E9lectionn\u00E9
 OptionPanel.small_bubble=Petite bulle
+OptionPanel.small_wide_hexagon=Petit hexagone
 OptionPanel.spelling_opt_case_sensitive=Sensible \u00E0 la casse
 OptionPanel.spelling_opt_ignore_all_caps_words=Ignorer les mots en majuscule
 OptionPanel.spelling_opt_ignore_capitalization=Ignorer les mots d\u00E9butant par une majuscule
@@ -1331,6 +1338,7 @@ OptionPanel.vertical_child_gap.tooltip=Espacement vertical entre fils
 OptionPanel.vi=Vietnamien
 OptionPanel.wheel_velocity=Vitesse
 OptionPanel.wheel_velocity.tooltip=Une valeur plus grande donne des effets de mouvements plus rapides sur la carte.
+OptionPanel.wide_hexagon=Grand hexagone
 OptionPanel.windows=Fen\u00EAtre
 OptionPanel.zh_CN=Chinois (simplifi\u00E9)
 OptionPanel.zh_TW=Chinois (Mandarin)
