--- a/freeplane/resources/translations/Resources_hu.properties
+++ b/freeplane/resources/translations/Resources_hu.properties
@@ -138,6 +138,9 @@ attributes_visible_tooltip=A N\u00E9zet men\u00FCben \u00E1ll\u00EDthat\u00F3, h
 automatic_layout=Automatikus form\u00E1z\u00E1s
 automatic_layout_disabled=letiltva
 automatically_save_message=A t\u00E9rk\u00E9p automatikusan ment\u00E9sre ker\u00FClt {0} n\u00E9ven...
+AutomaticEdgeColor.FOR_BRANCHES=\u00E1gakhoz
+AutomaticEdgeColor.FOR_COLUMNS=oszlopokhoz
+AutomaticEdgeColor.ON_BRANCH_CREATION=\u00E1g l\u00E9trehoz\u00E1sakor
 AutomaticEdgeColorHookAction.text=Automatikus \u00E9l sz\u00EDn
 AutomaticLayout.ALL=minden pontra
 AutomaticLayout.HEADINGS=a nem-lev\u00E9l pontokra
@@ -290,6 +293,7 @@ edit_label_font_family=Bet\u0171k\u00E9szlet
 edit_label_font_size=Bet\u0171m\u00E9ret
 edit_link_manually=Hivatkoz\u00E1s k\u00E9zi szerkeszt\u00E9se...
 edit_long_node=Pont szerkeszt\u00E9se p\u00E1rbesz\u00E9dablakban
+edit_middle_label=<html>K\u00F6z\u00E9ps\u0151<br>c\u00EDmke
 edit_note=Megjegyz\u00E9s szerkeszt\u00E9se
 edit_source_label=<html>Forr\u00E1s<br>c\u00EDmke
 edit_target_label=<html>C\u00E9l<br>c\u00EDmke
@@ -470,11 +474,13 @@ formula.EvaluateAllAction.tooltip=Minden k\u00E9plet \u00FAjrasz\u00E1mol\u00E1s
 formula.menuname=K\u00E9pletek
 formula_editor=K\u00E9plet szerkeszt\u00E9se
 ForwardAction.text=El\u0151re
+ForwardAction.tooltip=El\u0151reugrik a kijel\u00F6l\u00E9si l\u00E1ncban
 FreeNodeAction.text=Szabadon elhelyezhet\u0151 pont (ki/be)
 Freeplane.progress.buildScreen=K\u00E9perny\u0151 fel\u00E9p\u00EDt\u00E9se...
 Freeplane.progress.createController=Vez\u00E9rl\u0151 l\u00E9trehoz\u00E1sa...
 Freeplane.progress.createInitialMode=Kezdeti \u00FCzemm\u00F3d l\u00E9trehoz\u00E1sa...
 Freeplane.progress.endStartup=Ind\u00EDt\u00E1s v\u00E9ge.
+Freeplane.progress.gettingPreferenceDirectories=Be\u00E1ll\u00EDt\u00E1sok k\u00F6nyvt\u00E1rainak beolvas\u00E1sa...
 Freeplane.progress.gettingPreferences=Be\u00E1ll\u00EDt\u00E1sok bet\u00F6lt\u00E9se...
 Freeplane.progress.loadMaps=T\u00E9rk\u00E9pek bet\u00F6lt\u00E9se...
 Freeplane.progress.propagateLookAndFeel=Megjelen\u00E9s...
@@ -668,8 +674,15 @@ JoinNodesAction.text=Pontok egyes\u00EDt\u00E9se
 latex_editor=LaTeX Formula szerkeszt\u00E9se
 LatexDeleteLatexAction.text=LaTe&X formula elt\u00E1vol\u00EDt\u00E1sa
 LatexEditLatexAction.text=&LaTeX formula szerkeszt\u00E9se...
+LatexInsertLatexAction.msg1=<html>Egy <i>elavult</i> LaTeX formul\u00E1t pr\u00F3b\u00E1l besz\u00FArni.<br/>A LaTeX sz\u00F6veg/formula l\u00E9trehoz\u00E1s\u00E1nak \u00FAj m\u00F3dszere itt olvashat\u00F3:</html>
+LatexInsertLatexAction.msg2=<html>R\u00F6viden: <ul><li>haszn\u00E1ljon "\\latex " prefixet a pont sz\u00F6veg\u00E9ben vagy</li><li><i>N\u00E9zet->Jellemz\u0151k panel</i>, majd <i>T\u00F6rzssz\u00F6veg->Form\u00E1tum->LaTeX</i></li></ul></html>
 LatexInsertLatexAction.text=&LaTeX formula hozz\u00E1ad\u00E1sa...
 latexPatternFormat=LaTeX
+LengthUnits.cm=cm
+LengthUnits.in="
+LengthUnits.mm=mm
+LengthUnits.pt=pt
+LengthUnits.px=px
 less_than_two_selected_nodes=Linkek l\u00E9trehoz\u00E1s\u00E1hoz legal\u00E1bb k\u00E9t pontot kell kijel\u00F6lnie.
 license=Licenc: GPL 2 vagy \u00FAjabb
 license_text=<html>Ez a program szabad szoftver; terjeszthet\u0151 illetve m\u00F3dos\u00EDthat\u00F3 a<br>Free Software Foundation \u00E1ltal kiadott GNU General Public License<br>dokumentum\u00E1ban le\u00EDrtak; ak\u00E1r a licenc 2-es,<br> ak\u00E1r (tetsz\u0151leges) k\u00E9s\u0151bbi v\u00E1ltozata szerint.<br><br>Ez a program abban a rem\u00E9nyben ker\u00FCl k\u00F6zread\u00E1sra, hogy hasznos lesz,<br>de minden egy\u00E9b GARANCIA N\u00C9LK\u00DCL, az<br>ELADHAT\u00D3S\u00C1GRA vagy VALAMELY C\u00C9LRA VAL\u00D3 ALKALMAZHAT\u00D3S\u00C1GRA val\u00F3 sz\u00E1rmaztatott garanci\u00E1t is bele\u00E9rtve.<br>Tov\u00E1bbi r\u00E9szleteket a GNU General Public License tartalmaz.<br><br>A felhaszn\u00E1l\u00F3nak a programmal egy\u00FCtt meg kell kapnia a GNU General Public License<br>egy p\u00E9ld\u00E1ny\u00E1t; ha m\u00E9gsem kapta meg, akkor \u00EDrjon erre a c\u00EDmre:<br>Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
@@ -856,7 +869,13 @@ NodeExtensions.RemoveNodeExtensions=Pont kiterjeszt\u00E9sek elt\u00E1vol\u00EDt
 NodeListAction.text=Keres \u00E9s cser\u00E9l...
 NodeListAction.tooltip=Minden pont megjelen\u00EDt\u00E9se kereshet\u0151 listak\u00E9nt sz\u0171r\u00E9si jellemz\u0151kkel.
 NodeShapeAction.bubble.text=&Bubor\u00E9k
+NodeShapeAction.circle.text=K\u00F6r
 NodeShapeAction.fork.text=El\u00E1gaz\u00E1s
+NodeShapeAction.narrow_hexagon.text=Keskeny hexagon
+NodeShapeAction.oval.text=Ov\u00E1lis
+NodeShapeAction.small_bubble.text=Kis bubor\u00E9k
+NodeShapeAction.small_wide_hexagon.text=Kis hexagon
+NodeShapeAction.wide_hexagon.text=Sz\u00E9les hexagon
 NodeUpAction.text=Pont mozgat\u00E1sa felfel\u00E9
 nonboldify_branch=F\u00E9lk\u00F6v\u00E9r ki
 nonitalicise_branch=D\u00F5lt ki
@@ -902,7 +921,7 @@ OptionPanel.apply_system_screen_resolution=Rendszer-felbont\u00E1s haszn\u00E1la
 OptionPanel.approximate_search_threshold=T\u0171r\u00E9s a k\u00F6r\u00FCl-bel\u00FCli egyez\u00E9shez
 OptionPanel.approximate_search_threshold.tooltip=<html>T\u0171r\u00E9s a k\u00F6r\u00FCl-bel\u00FCli egyez\u00E9shez<br/><font size="2">l\u00E1sd a http://freeplane.sf.net/wiki/index.php/Approximate_search</font><br/>oldalt (magasabb \u00E9rt\u00E9kre kevesebb<br/>tal\u00E1latot eredm\u00E9nyez)</html>
 OptionPanel.ar=Arab / \u0627\u0644\u0639\u0631\u0628\u064A\u0629
-OptionPanel.ARC=Arc
+OptionPanel.ARC=\u00CDv
 OptionPanel.as_parent=Mint a sz\u00FCl\u0151
 OptionPanel.ask=K\u00E9rdezze meg
 OptionPanel.automatic=Automatikus
@@ -919,6 +938,7 @@ OptionPanel.center_selected_node=Kiv\u00E1lasztott pont k\u00F6z\u00E9pre helyez
 OptionPanel.check_updates_automatically=Friss\u00EDt\u00E9sek keres\u00E9se ind\u00EDt\u00E1skor
 OptionPanel.childpattern=Gyerek minta
 OptionPanel.childpattern.tooltip=A kiv\u00E1lasztott minta minden gyerek objektumra alkalmaz\u00E1sra ker\u00FCl.
+OptionPanel.circle=K\u00F6r
 OptionPanel.clear_all_setters=Minden v\u00E1ltoztat\u00E1sa
 OptionPanel.cloud=Felh\u0151
 OptionPanel.cloudcolor=Felh\u0151 sz\u00EDne
@@ -948,6 +968,7 @@ OptionPanel.default_browser_command_windows_9x.tooltip=<html>Windows alatt (a ""
 OptionPanel.default_browser_command_windows_nt=Alap\u00E9rtelmezett b\u00F6ng\u00E9sz\u0151parancs (Windows NT)
 OptionPanel.default_browser_command_windows_nt.tooltip=<html>Windows alatt (a "" jelek az "=" karaktert tartalmaz\u00F3 URL hivatkoz\u00E1sok miatt kellenek).</html>
 OptionPanel.default_charset=Karakterk\u00E9szlet
+OptionPanel.default_save_dir=Alap\u00E9rtelmezett ment\u00E9si k\u00F6nyvt\u00E1r
 OptionPanel.Defaults=Alap\u00E9rtelmez\u00E9sek
 OptionPanel.delete_automatic_saves_at_exit=Automatikus ment\u00E9sek t\u00F6rl\u00E9se kil\u00E9p\u00E9skor
 OptionPanel.delete_automatic_saves_at_exit.tooltip=<html>\u00C1ll\u00EDtsa igaz \u00E9rt\u00E9kre, ha szeretn\u00E9, hogy a Freeplane norm\u00E1l bez\u00E1r\u00E1sakor t\u00F6rl\u0151djenek a f\u00E1jlok</html>
@@ -1073,6 +1094,7 @@ OptionPanel.max_shortened_text_length=Maxim\u00E1lis r\u00F6vid sz\u00F6veg sz\u
 OptionPanel.metal=F\u00E9mes
 OptionPanel.min_node_width=Minim\u00E1lis pont sz\u00E9less\u00E9g
 OptionPanel.motif=Motif
+OptionPanel.narrow_hexagon=Keskeny hexagon
 OptionPanel.nb=Norv\u00E9g Bokm\u00E5l / Norsk bokm\u00E5l
 OptionPanel.never_save_folding=Soha
 OptionPanel.nl=Holland, flamand / Nederlands, Vlaams
@@ -1105,9 +1127,14 @@ OptionPanel.org.freeplane.plugin.bugreport.denied=Soha ne jelentse
 OptionPanel.org.freeplane.plugin.bugreport.userid=Opcion\u00E1lis azonos\u00EDt\u00F3, ami bek\u00FCld\u00E9sre ker\u00FCl
 OptionPanel.outline_hgap=V\u00EDzszintes t\u00E1vols\u00E1g
 OptionPanel.outline_vgap=F\u00FCgg\u0151leges t\u00E1vols\u00E1g
+OptionPanel.oval=Ov\u00E1lis
 OptionPanel.paint_connectors_behind=\u00D6sszek\u00F6t\u0151k kirajzol\u00E1sa a pontok m\u00F6g\u00E9
 OptionPanel.parse_data=Sz\u00E1mok \u00E9s d\u00E1tum-id\u0151 \u00E9rt\u00E9kek felismer\u00E9se a bevitt adatokban
 OptionPanel.parse_data.tooltip=Megpr\u00F3b\u00E1lja \u00E9rtelmezni a d\u00E1tum, d\u00E1tum-id\u0151 \u00E9s sz\u00E1m bemeneteket \u00E9s alkalmazni a megfelel\u0151 form\u00E1z\u00E1st. Pl: 100,000.00, 12/31, 12/31/99, 1999-12-31 \u00E9s 1999-12-31 23:59
+OptionPanel.parse_formulas=Formul\u00E1k felismer\u00E9se
+OptionPanel.parse_formulas.tooltip=Formul\u00E1k feldolgoz\u00E1sa a '=' karakterrel kezd\u0151d\u0151 pontok eset\u00E9n: L\u00E1sd a http://www.freeplane.org/wiki/index.php/Formulas oldalt.
+OptionPanel.parse_latex=LaTeX felismer\u00E9s
+OptionPanel.parse_latex.tooltip=LaTeX formul\u00E1k felismer\u00E9se form\u00E1tum vagy prefix alapj\u00E1n: L\u00E1sd a http://www.freeplane.org/wiki/index.php/LaTeX_in_Freeplane oldalt.
 OptionPanel.PASTE_HTML=Beilleszt\u00E9s HTML-k\u00E9nt
 OptionPanel.PASTE_PLAIN_TEXT=Beilleszt\u00E9s egyszer\u0171 sz\u00F6vegk\u00E9nt
 OptionPanel.path_property_may_not_be_empty=Az \u00FAtvonal tulajdons\u00E1g nem lehet \u00FCres! A v\u00E1ltoztat\u00E1s nem ker\u00FClt ment\u00E9sre.
@@ -1218,6 +1245,7 @@ OptionPanel.separator.updates=Programfriss\u00EDt\u00E9sek
 OptionPanel.set_property_text=M\u00F3dos\u00EDt
 OptionPanel.set_property_text.tooltip=Jel\u00F6lje be, ha ezt a st\u00EDlusjellemz\u0151t a megadott \u00E9rt\u00E9kre szeretn\u00E9 m\u00F3dos\u00EDtani
 OptionPanel.setscript=Megv\u00E1ltoztassuk?
+OptionPanel.setscript.tooltip=Szkriptet lehet t\u00E1rs\u00EDtani a st\u00EDlushoz.
 OptionPanel.sharp_bezier=\u00C9lesen lekerek\u00EDtett (bezier)
 OptionPanel.sharp_linear=Hegyes egyenes
 OptionPanel.show_icon_for_attributes=Attrib\u00FAtum jelz\u0151 ikon megjelen\u00EDt\u00E9se
@@ -1236,6 +1264,8 @@ OptionPanel.single_instance_force.tooltip=Mindenk\u00E9pp ker\u00FClje el a t\u0
 OptionPanel.sk=Szlov\u00E1k / sloven\u010Dina
 OptionPanel.sl=Szlov\u00E9n / sloven\u0161\u010Dina
 OptionPanel.slow_scroll_selected_node=Lass\u00FA g\u00F6rget\u00E9s a kijel\u00F6lt pontra
+OptionPanel.small_bubble=Kis bubor\u00E9k
+OptionPanel.small_wide_hexagon=Kis hexagon
 OptionPanel.spelling_opt_case_sensitive=Kis- \u00E9s nagybet\u0171 k\u00FCl\u00F6nb\u00F6z\u0151
 OptionPanel.spelling_opt_ignore_all_caps_words=Csupa nagybet\u0171s szavak kihagy\u00E1sa
 OptionPanel.spelling_opt_ignore_capitalization=Nagy kezd\u0151bet\u0171s szavak kihagy\u00E1sa
@@ -1266,6 +1296,7 @@ OptionPanel.structured_icon_toolbar=Strukt\u00FAr\u00E1lt eszk\u00F6zt\u00E1r ik
 OptionPanel.summary=\u00D6sszegz\u00E9s
 OptionPanel.sv=Sv\u00E9d / svenska
 OptionPanel.text.use_ctrl_key=Haszn\u00E1lja az Eszk\u00F6z\u00F6k men\u00FC 'Gyorsbillenty\u0171 be\u00E1ll\u00EDt\u00E1sa...' almen\u00FCt
+OptionPanel.textalignment=Sz\u00F6veg igaz\u00EDt\u00E1sa
 OptionPanel.time_for_automatic_save=Automatikus ment\u00E9s gyakoris\u00E1ga
 OptionPanel.time_for_automatic_save.tooltip=<html> k\u00E9t egym\u00E1st k\u00F6vet\u0151 ment\u00E9s k\u00F6z\u00F6tti id\u0151 (ezredm\u00E1sodpercben): Az automatikus ment\u00E9s kikapcsol\u00E1s\u00E1hoz \u00E1ll\u00EDtsa ezt az \u00E9rt\u00E9ket 2000000000-ra.</html>
 OptionPanel.time_for_delayed_selection=K\u00E9sleltetett kijel\u00F6l\u00E9s ideje
@@ -1275,6 +1306,7 @@ OptionPanel.toolTipManager.initialDelay=Megmutat\u00E1s k\u00E9sleltet\u00E9se, 
 OptionPanel.toolTipManager.max_tooltip_width=Inform\u00E1ci\u00F3s bubor\u00E9k sz\u00E9less\u00E9ge
 OptionPanel.toolTipManager.max_tooltip_width.tooltip=<html>Gyorstipp ablakok alap\u00E9rtelmezett sz\u00E9less\u00E9ge pixelben.</html>
 OptionPanel.toolTipManager.reshowDelay=\u00DAjra mutat\u00E1s k\u00E9sleltet\u00E9se, ms
+OptionPanel.tr=T\u00F6r\u00F6k / T\u00FCrk\u00E7e
 OptionPanel.uk_UA=Ukr\u00E1n / \u0423\u043A\u0440\u0430\u0457\u043D\u0441\u044C\u043A\u0430
 OptionPanel.undefined_font=Nem defini\u00E1lt bet\u0171t\u00EDpus
 OptionPanel.undo_levels=Visszavon\u00E1si szintek
@@ -1292,9 +1324,12 @@ OptionPanel.validate_invalid_datetime_format=Hib\u00E1s d\u00E1tum-id\u0151 form
 OptionPanel.validate_invalid_number_format=Hib\u00E1s sz\u00E1mform\u00E1tum
 OptionPanel.validate_write_without_read=Szkriptek: fontolja meg, hogy olvas\u00E1si jogot is ad az \u00EDr\u00E1si jog mell\u00E9.
 OptionPanel.validation_warning=<html><body>Ellen\u0151rz\u00E9si figyelmeztet\u00E9s(ek):<p><em>{0}</em></body></html>
+OptionPanel.vertical_child_gap=Gyermek t\u00E9rk\u00F6z
+OptionPanel.vertical_child_gap.tooltip=F\u00FCgg\u0151leges t\u00E1vols\u00E1g a gyermekpontok k\u00F6z\u00F6tt
 OptionPanel.vi=Vietn\u00E1mi / Ti\u1EBFng Vi\u1EC7t
 OptionPanel.wheel_velocity=Sebess\u00E9g
 OptionPanel.wheel_velocity.tooltip=Magasabb \u00E9rt\u00E9k gyorsabb mozg\u00E1st eredm\u00E9nyez a t\u00E9rk\u00E9pen.
+OptionPanel.wide_hexagon=Sz\u00E9les hexagon
 OptionPanel.windows=Windows
 OptionPanel.zh_CN=K\u00EDnai, egyszer\u0171s\u00EDtett / \u7B80\u4F53\u5B57
 OptionPanel.zh_TW=K\u00EDnai, hagyom\u00E1nyos / \u7E41\u9AD4\u5B57
@@ -1304,8 +1339,11 @@ org.freeplane.plugin.bugreport.always_deny=Soha ne k\u00FCldje el
 org.freeplane.plugin.bugreport.deny=Ne k\u00FCldje el
 org.freeplane.plugin.bugreport.dialog.title=Automatikus hibabejelent\u00E9s
 org.freeplane.plugin.bugreport.freeplane_team=\u00DCzenet a Freeplane csapat\u00E1nak
+org.freeplane.plugin.bugreport.lastreport=A kapott jelent\u00E9s
 org.freeplane.plugin.bugreport.never=Soha ne k\u00E9rjen seg\u00EDts\u00E9get
 org.freeplane.plugin.bugreport.question=A Freeplane automatikus hibakezel\u0151 motorral rendelkezik.
+org.freeplane.plugin.bugreport.report=Aktu\u00E1lis jelent\u00E9s
+org.freeplane.plugin.bugreport.wanted_bug=Bels\u0151 hiba t\u00F6rt\u00E9nt, ami automatikus bejelent\u00E9sre ker\u00FClt.
 org.freeplane.plugin.script.NodeIdHighlighter.node_is_not_defined={0} pont nincs defini\u00E1lva
 out_of_memory=Megtelt a mem\u00F3ria.
 PageAction.text=Oldalbe\u00E1ll\u00EDt\u00E1s...
@@ -1351,6 +1389,7 @@ plugins/TimeList.xml_Icons=Ikonok
 plugins/TimeList.xml_Modified=M\u00F3dos\u00EDtva
 plugins/TimeList.xml_Notes=Megjegyz\u00E9sek
 plugins/TimeList.xml_Text=Sz\u00F6veg
+plugins/TimeManagement.xml_appendButton=D\u00E1tum besz\u00FAr\u00E1sa a kijel\u00F6l\u00E9sbe
 plugins/TimeManagement.xml_Cancel=M\u00E9gsem
 plugins/TimeManagement.xml_cancelButton=M\u00E9gsem
 plugins/TimeManagement.xml_closeButton=Bez\u00E1r
@@ -1430,8 +1469,12 @@ save_unsaved=Menti az al\u00E1bbi elmet\u00E9rk\u00E9pet?
 save_unsaved_styles=Menti a st\u00EDlusokat?
 SaveAcceleratorPresetsAction.text=Gyorsbillenty\u0171 profil ment\u00E9se...
 SaveAction.text=Ment\u00E9s
+SaveAction_readonlyMsg=A t\u00E9rk\u00E9p csak \u00EDr\u00E1sv\u00E9dett. K\u00E9rem haszn\u00E1lja a "F\u00E1jl->T\u00E9rk\u00E9p ment\u00E9se mint..." men\u00FCpontot a t\u00E9rk\u00E9p lement\u00E9s\u00E9hez.
+SaveAction_readonlyTitle=K\u00EDs\u00E9rlet \u00EDr\u00E1sv\u00E9dett t\u00E9rk\u00E9p ment\u00E9s\u00E9re
 SaveAll.text=Az \u00F6sszes megny&itott t\u00E9rk\u00E9p ment\u00E9se
 SaveAll.tooltip=Lementi az \u00F6sszes megnyitott t\u00E9rk\u00E9pet
+SaveAs_toReadonlyMsg={0} \u00EDr\u00E1sv\u00E9dett. K\u00E9rem mentse egy m\u00E1sik f\u00E1jlba.
+SaveAs_toReadonlyTitle=\u00CDr\u00E1sv\u00E9dett f\u00E1jlra pr\u00F3b\u00E1lt menteni
 SaveAsAction.text=Me&nt\u00E9s m\u00E1sk\u00E9nt...
 saved=Mentve
 saving_canceled=Ment\u00E9s megszak\u00EDtva
@@ -1711,6 +1754,11 @@ summary_not_possible=Az aktu\u00E1lis kijel\u00F6l\u00E9sre nem hozhat\u00F3 l\u
 SummaryNodeAction.text=\u00D6sszegz\u0151pont (ki/be)
 svg=SVG
 template_dir=Be\u00E9p\u00EDtett sablonok
+TextAlignAction.CENTER.text=K\u00F6z\u00E9pre igaz\u00EDtott sz\u00F6veg
+TextAlignAction.DEFAULT.text=Alap\u00E9rtelmezett
+TextAlignAction.LEFT.text=Balra igaz\u00EDtott sz\u00F6veg
+TextAlignAction.RIGHT.text=Jobbra igaz\u00EDtott sz\u00F6veg
+textalignment=Sz\u00F6veg igaz\u00EDt\u00E1sa
 TimeListAction.text=Feladatok kezel\u00E9se...
 TimeListAction.tooltip=Minden \u00FCtemezett id\u0151 \u00E9s a hozz\u00E1juk tartoz\u00F3 pontok megjelen\u00EDt\u00E9se.
 TimeManagementAction.text=Id\u0151 kezel\u00E9se...
@@ -1736,6 +1784,7 @@ UnfoldAllAction.text=Minden kihajt\u00E1sa
 UnfoldAllAction.tooltip=<html>Kihajtja a kijel\u00F6lt pontokat a gyermekeikkel egy\u00FCtt.</html>
 UnfoldOneLevelAction.text=Egy szint kihajt\u00E1sa
 UnfoldOneLevelAction.tooltip=A kijel\u00F6lt pontokat egy szinttel kihajtja.
+unparsedLatexPatternFormat=Feldolgozatlan LaTeX
 up=&Fel
 UpConditionAction.text=Fel
 update_failed=A friss\u00EDt\u00E9s meghi\u00FAsult a k\u00F6vetkez\u0151 \u00FCzenettel: {0}
@@ -1762,6 +1811,7 @@ user_defined_zoom_status_bar=A nagy\u00EDt\u00E1si \u00E9rt\u00E9k az \u00E1ltal
 user_icon=Felhaszn\u00E1l\u00F3i ikon "{0}"
 user_template_dir=Felhaszn\u00E1l\u00F3i sablonok
 user_zoom=Nyomtatand\u00F3 nagy\u00EDt\u00E1si \u00E9rt\u00E9k (0.0 - 2.0):
+value_format=\u00C9rt\u00E9k form\u00E1tuma
 version_up_to_date=Az el\u00E9rhet\u0151 leg\u00FAjabb verzi\u00F3t haszn\u00E1lja
 ViewerControllerAction.text=K\u00FCls\u0151 objektum...
 ViewLayoutTypeAction.OUTLINE.text=\u00C1ttekint\u0151 n\u00E9zet
