--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -45,7 +45,7 @@ AddOnDetailsPanel.homepage=\u30DB\u30FC\u30E0\u30DA\u30FC\u30B8\uFF1A
 addons.installer.canceled=\u30A4\u30F3\u30B9\u30C8\u30FC\u30EB\u304C\u30AD\u30E3\u30F3\u30BB\u30EB\u3055\u308C\u307E\u3057\u305F\u3002
 addons.installer.confirm.licence=<html><body><h1>\u30E9\u30A4\u30BB\u30F3\u30B9</h1>{0}<p><p><em>\u3053\u306E\u30E9\u30A4\u30BB\u30F3\u30B9\u3092\u627F\u8A8D\u3057\u307E\u3059\u304B\uFF1F</em></p></body></html>
 addons.installer.failed=\u30A4\u30F3\u30B9\u30C8\u30FC\u30EB\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\uFF1A{0}
-addons.installer.freeplaneversion.format.error={0} (\u5024{1})\u306B\u66F8\u5F0F\u30A8\u30E9\u30FC\u304C\u3042\u308A\u307E\u3059\u3002
+addons.installer.freeplaneversion.format.error={0} (\u5024: {1})\u306B\u66F8\u5F0F\u30A8\u30E9\u30FC\u304C\u3042\u308A\u307E\u3059\u3002
 addons.installer.html.script=\u30B9\u30AF\u30EA\u30D7\u30C8\u672C\u4F53\u304C HTML \u66F8\u5F0F\u3068\u306A\u3063\u3066\u3044\u306A\u3044\u3088\u3046\u3067\u3059\u3002
 addons.installer.install=\u30A4\u30F3\u30B9\u30C8\u30FC\u30EB
 addons.installer.invalid.keyboard.shortcut=\u30B7\u30E7\u30FC\u30C8\u30AB\u30C3\u30C8 {0} \u306F\u7121\u52B9\u3067\u3059\u3002
@@ -137,6 +137,9 @@ attributes_visible_tooltip=\u30C1\u30A7\u30C3\u30AF\u3059\u308B\u3068\u3001\u300
 automatic_layout=\u81EA\u52D5\u30EC\u30A4\u30A2\u30A6\u30C8
 automatic_layout_disabled=\u3057\u306A\u3044
 automatically_save_message=\u30DE\u30C3\u30D7\u306F\u81EA\u52D5\u4FDD\u5B58\u3055\u308C\u307E\u3057\u305F\u3002 (\u30D5\u30A1\u30A4\u30EB\u540D\uFF1A {0}) ...
+AutomaticEdgeColor.FOR_BRANCHES=\u679D\u3054\u3068
+AutomaticEdgeColor.FOR_COLUMNS=\u968E\u5C64\u3054\u3068
+AutomaticEdgeColor.ON_BRANCH_CREATION=\u679D\u306E\u4F5C\u6210\u6642
 AutomaticEdgeColorHookAction.text=\u7DDA\u306E\u8272\u3092\u81EA\u52D5\u9078\u629E
 AutomaticLayout.ALL=\u3059\u3079\u3066\u306E\u30CE\u30FC\u30C9\u306B
 AutomaticLayout.HEADINGS=\u672B\u7AEF\u30CE\u30FC\u30C9\u3092\u9664\u3044\u3066
@@ -153,7 +156,7 @@ background=\u80CC\u666F
 bitmaps=\u30D3\u30C3\u30C8\u30DE\u30C3\u30D7
 black=\u9ED2
 BlinkingNodeHookAction.text=\u30CE\u30FC\u30C9\u3092\u70B9\u6EC5
-BlinkingNodeHookAction.tooltip=<html>\u30CE\u30FC\u30C9\u3092\u70B9\u6EC5\u3055\u305B\u307E\u3059\u3002\u3053\u306E\u30CE\u30FC\u30C9\u3092\u591A\u6570\u306E\u30CE\u30FC\u30C9\u3092\u95A2\u9023\u3065\u3051\u305F\u308A\u3001<br><strong>\u4ED6\u306E\u81EA\u52D5\u30D5\u30A9\u30FC\u30DE\u30C3\u30C8\u3092\u9069\u7528\u3057\u305F\u308A\u3057\u306A\u3044\u3088\u3046\u3001</strong>\u6CE8\u610F\u3057\u3066\u4E0B\u3055\u3044</html>
+BlinkingNodeHookAction.tooltip=<html>\u30CE\u30FC\u30C9\u3092\u70B9\u6EC5\u3055\u305B\u307E\u3059\u3002\u3053\u306E\u30CE\u30FC\u30C9\u3092\u591A\u6570\u306E\u30CE\u30FC\u30C9\u3068\u95A2\u9023\u3065\u3051\u305F\u308A\u3001<br><strong>\u4ED6\u306E\u81EA\u52D5\u30D5\u30A9\u30FC\u30DE\u30C3\u30C8\u3092\u9069\u7528\u3057\u305F\u308A\u3057\u306A\u3044\u3088\u3046\u306B</strong>\u6CE8\u610F\u3057\u3066\u4E0B\u3055\u3044</html>
 blue=\u9752
 BoldAction.text=\u592A\u5B57
 boldify_branch=\u592A\u5B57\u5316
@@ -229,7 +232,7 @@ CreateConjunctConditionAction.text=And
 CreateDisjunctConditionAction.text=Or
 CreateNotSatisfiedConditionAction.text=Not
 CreationModificationPluginAction.text=\u66F4\u65B0\u6642\u523B\u3092\u8868\u793A(&M)
-CreationModificationPluginAction.tooltip=\u30CE\u30FC\u30C9\u306E\u4F5C\u6210\u30FB\u5909\u66F4\u6642\u523B\u3092\u8A18\u9332\u3057\u307E\u3059\u3002
+CreationModificationPluginAction.tooltip=<html>\u30CE\u30FC\u30C9\u306E\u4F5C\u6210\u30FB\u5909\u66F4\u6642\u523B\u3092\u8A18\u9332\u3057\u307E\u3059\u3002</html>
 current_dir=\u30DE\u30C3\u30D7
 CutAction.text=\u5207\u308A\u53D6\u308A(&T)
 decrease_branch_font_size=\u6587\u5B57\u3092\u5C0F\u3055\u304F
@@ -265,11 +268,11 @@ edge_style=\u7DDA\u306E\u5F62\u72B6
 edge_width=\u7DDA\u306E\u592A\u3055
 EdgeColorAction.text=\u7DDA\u306E\u8272...
 EdgeStyleAction.bezier.text=\u30D9\u30B8\u30A7\u66F2\u7DDA
-EdgeStyleAction.bezier.tooltip=\u7DDA\u3092\u306A\u3060\u3089\u304B\u306A\u66F2\u7DDA\u3067\u8868\u793A\u3057\u307E\u3059\u3002
+EdgeStyleAction.bezier.tooltip=<html>\u7DDA\u3092\u306A\u3060\u3089\u304B\u306A\u66F2\u7DDA\u3067\u8868\u793A\u3057\u307E\u3059\u3002</html>
 EdgeStyleAction.hide_edge.text=\u7DDA\u3092\u96A0\u3059
 EdgeStyleAction.hide_edge.tooltip=<html>\u9078\u629E\u4E2D\u306E\u30CE\u30FC\u30C9\u304B\u3089\u89AA\u30CE\u30FC\u30C9\u3078\u306E\u7DDA\u306F\u3001\u70B9\u7DDA\u3067\u8868\u793A\u3057\u307E\u3059\u3002<br>\u305D\u306E\u4ED6\u306E\u5834\u5408\u306F\u3001\u7DDA\u3092\u975E\u8868\u793A\u306B\u3057\u307E\u3059\u3002</html>
 EdgeStyleAction.horizontal.text=\u76F4\u89D2\u66F2\u304C\u308A
-EdgeStyleAction.horizontal.tooltip=\u76F4\u89D2\u306B\u66F2\u304C\u308B\u76F4\u7DDA\u3092\u4F7F\u7528\u3057\u307E\u3059\u3002
+EdgeStyleAction.horizontal.tooltip=<html>\u76F4\u89D2\u306B\u66F2\u304C\u308B\u76F4\u7DDA\u3092\u4F7F\u7528\u3057\u307E\u3059\u3002</html>
 EdgeStyleAction.linear.text=\u76F4\u7DDA
 EdgeStyleAction.linear.tooltip=\u7DDA\u3092\u89D2\u306E\u7121\u3044\u76F4\u7DDA\u3067\u8868\u793A\u3057\u307E\u3059\u3002
 EdgeStyleAction.sharp_bezier.text=\u5148\u7D30\u30D9\u30B8\u30A7\u66F2\u7DDA
@@ -865,7 +868,10 @@ NodeExtensions.RemoveNodeExtensions=\u62E1\u5F35\u30CE\u30FC\u30C9\u30C7\u30FC\u
 NodeListAction.text=\u691C\u7D22\uFF06\u7F6E\u63DB...
 NodeListAction.tooltip=\u30A4\u30F3\u30AF\u30EA\u30E1\u30F3\u30BF\u30EB\u30B5\u30FC\u30C1\u306B\u3088\u308A\u3001\u7F6E\u63DB\u5BFE\u8C61\u30CE\u30FC\u30C9\u304C\u30EA\u30B9\u30C8\u30A2\u30C3\u30D7\u3055\u308C\u307E\u3059\u3002
 NodeShapeAction.bubble.text=\u56F2\u307F(&B)
+NodeShapeAction.circle.text=\u5186
 NodeShapeAction.fork.text=\u30D5\u30A9\u30FC\u30AF(&F)
+NodeShapeAction.oval.text=\u6955\u5186
+NodeShapeAction.small_bubble.text=\u5C0F\u3055\u306A\u56F2\u307F
 NodeUpAction.text=\u30CE\u30FC\u30C9\u3092\u79FB\u52D5\uFF08\u5144\u5F1F\u9593\u3067\u4E0A\u3078\uFF09
 nonboldify_branch=\u592A\u5B57\u89E3\u9664
 nonitalicise_branch=\u659C\u4F53\u89E3\u9664
@@ -929,6 +935,7 @@ OptionPanel.center_selected_node=\u9078\u629E\u30CE\u30FC\u30C9\u3092\u4E2D\u592
 OptionPanel.check_updates_automatically=\u8D77\u52D5\u6642\u306B\u30A2\u30C3\u30D7\u30C7\u30FC\u30C8\u3092\u30C1\u30A7\u30C3\u30AF
 OptionPanel.childpattern=\u5B50\u30CE\u30FC\u30C9\u30D1\u30BF\u30FC\u30F3
 OptionPanel.childpattern.tooltip=\u9078\u629E\u3055\u308C\u305F\u30D1\u30BF\u30FC\u30F3\u306F\u3059\u3079\u3066\u306E\u5B50\u30CE\u30FC\u30C9\u306B\u9069\u7528\u3055\u308C\u307E\u3059\u3002
+OptionPanel.circle=\u5186
 OptionPanel.clear_all_setters=\u3059\u3079\u3066\u5207\u308A\u66FF\u3048
 OptionPanel.clear_all_setters.tooltip=\u3059\u3079\u3066\u306E\u5909\u66F4\u8868\u793A\u306E\u6709\u52B9\uFF0F\u7121\u52B9\u3092\u5207\u308A\u66FF\u3048\u307E\u3059\u3002
 OptionPanel.cloud=\u96F2\u3000\u3000
@@ -951,14 +958,15 @@ OptionPanel.default=\u6A19\u6E96
 OptionPanel.default_attribute_key_column_width=\u5C5E\u6027\u30AD\u30FC\u306E\u6A19\u6E96\u8868\u793A\u5E45
 OptionPanel.default_attribute_value_column_width=\u5C5E\u6027\u5024\u306E\u6A19\u6E96\u8868\u793A\u5E45
 OptionPanel.default_browser_command_mac=Mac OS X
-OptionPanel.default_browser_command_mac.tooltip=MAC\u306E\u5834\u5408 (thanks to Nick!)
+OptionPanel.default_browser_command_mac.tooltip=<html>MAC\u306E\u5834\u5408 (thanks to Nick!)</html>
 OptionPanel.default_browser_command_other_os=\u305D\u306E\u4ED6\u306EOS
-OptionPanel.default_browser_command_other_os.tooltip=\u4E3B\u306B Linux \u306E\u5834\u5408
+OptionPanel.default_browser_command_other_os.tooltip=<html>\u4E3B\u306B Linux \u306E\u5834\u5408</html>
 OptionPanel.default_browser_command_windows_9x=Windows 9X
-OptionPanel.default_browser_command_windows_9x.tooltip=Windows \u306E\u5834\u5408\uFF1A\u30EA\u30F3\u30AF\u306E URL \u306B "=" \u304C\u542B\u307E\u308C\u308B\u3053\u3068\u304C\u3042\u308B\u306E\u3067\u3001 "" \u306E\u7B26\u53F7\u304C\u5FC5\u8981\u3067\u3059\u3002
+OptionPanel.default_browser_command_windows_9x.tooltip=<html>Windows \u306E\u5834\u5408\uFF1A\u30EA\u30F3\u30AF\u306E URL \u306B "=" \u304C\u542B\u307E\u308C\u308B\u3053\u3068\u304C\u3042\u308B\u306E\u3067\u3001 "" \u306E\u7B26\u53F7\u304C\u5FC5\u8981\u3067\u3059\u3002</html>
 OptionPanel.default_browser_command_windows_nt=Windows NT
-OptionPanel.default_browser_command_windows_nt.tooltip=Windows \u306E\u5834\u5408\uFF1A\u30EA\u30F3\u30AF\u306E URL \u306B "=" \u304C\u542B\u307E\u308C\u308B\u3053\u3068\u304C\u3042\u308B\u306E\u3067\u3001 "" \u306E\u7B26\u53F7\u304C\u5FC5\u8981\u3067\u3059\u3002
+OptionPanel.default_browser_command_windows_nt.tooltip=<html>Windows \u306E\u5834\u5408\uFF1A\u30EA\u30F3\u30AF\u306E URL \u306B "=" \u304C\u542B\u307E\u308C\u308B\u3053\u3068\u304C\u3042\u308B\u306E\u3067\u3001 "" \u306E\u7B26\u53F7\u304C\u5FC5\u8981\u3067\u3059\u3002</html>
 OptionPanel.default_charset=\u6587\u5B57\u30B3\u30FC\u30C9
+OptionPanel.default_save_dir=\u65E2\u5B9A\u306E\u4FDD\u5B58\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA
 OptionPanel.Defaults=\u57FA\u672C\u8A2D\u5B9A
 OptionPanel.delete_automatic_saves_at_exit=\u7D42\u4E86\u6642\u306B\u81EA\u52D5\u4FDD\u5B58\u30D5\u30A1\u30A4\u30EB\u3092\u524A\u9664
 OptionPanel.delete_automatic_saves_at_exit.tooltip=<html>\u30C1\u30A7\u30C3\u30AF\u3059\u308B\u3068\u3001Freeplane \u306E\u901A\u5E38\u7D42\u4E86\u6642\u306B\u81EA\u52D5\u4FDD\u5B58\u30D5\u30A1\u30A4\u30EB\u3092\u524A\u9664\u3057\u307E\u3059\u3002<br>\u8A33\u8005\u6CE8\uFF1A\u3053\u306E\u6A5F\u80FD\u306B\u3088\u308A\u524A\u9664\u3055\u308C\u308B\u306E\u306F\u300C\u81EA\u52D5\u4FDD\u5B58\u30D5\u30A1\u30A4\u30EB\u300D\u3060\u3051\u3067\u3059\u3002\u300C\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7<br>\u30D5\u30A1\u30A4\u30EB\u300D\u306F\u524A\u9664\u3055\u308C\u307E\u305B\u3093\u3002</html>
@@ -1061,7 +1069,7 @@ OptionPanel.latex_disable_editor.tooltip=LaTex\u30A8\u30C7\u30A3\u30BF\u306B\u55
 OptionPanel.latex_editor_font=LaTeX\u30B7\u30F3\u30BF\u30C3\u30AF\u30B9\u30CF\u30A4\u30E9\u30A4\u30C8\u30A8\u30C7\u30A3\u30BF\u306E\u30D5\u30A9\u30F3\u30C8
 OptionPanel.latex_editor_font.tooltip=Unicode\u6587\u5B57\u304C\u5FC5\u8981\u306A\u3089 'Dialog' \u304B 'Monospaced' \u3092\u4F7F\u7528\u3057\u3066\u304F\u3060\u3055\u3044\uFF01
 OptionPanel.latex_editor_font_size=LaTeX\u30B7\u30F3\u30BF\u30C3\u30AF\u30B9\u30CF\u30A4\u30E9\u30A4\u30C8\u30A8\u30C7\u30A3\u30BF\u306E\u30D5\u30A9\u30F3\u30C8\u30B5\u30A4\u30BA
-OptionPanel.latex_macros=\u4E00\u822C\u7684\u306A LaTeX \u30DE\u30AF\u30ED
+OptionPanel.latex_macros=\u5171\u901A LaTeX \u30DE\u30AF\u30ED
 OptionPanel.layout_map_on_text_change=\u7DE8\u96C6\u4E2D\u306B\u30DE\u30C3\u30D7\u3092\u81EA\u52D5\u30EC\u30A4\u30A2\u30A6\u30C8
 OptionPanel.layout_map_on_text_change.tooltip=\u30D1\u30D5\u30A9\u30FC\u30DE\u30F3\u30B9\u3092\u512A\u5148\u3059\u308B\u5834\u5408\u306F\u7121\u52B9\u306B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 OptionPanel.linear=\u76F4\u7DDA
@@ -1118,8 +1126,9 @@ OptionPanel.org.freeplane.plugin.bugreport.allowed=\u5E38\u306B\u9001\u4FE1
 OptionPanel.org.freeplane.plugin.bugreport.ask=\u30EC\u30DD\u30FC\u30C8\u30C0\u30A4\u30A2\u30ED\u30B0\u3092\u8868\u793A
 OptionPanel.org.freeplane.plugin.bugreport.denied=\u5E38\u306B\u9001\u4FE1\u3057\u306A\u3044
 OptionPanel.org.freeplane.plugin.bugreport.userid=\u30D0\u30B0\u5831\u544A\u306B\u7528\u3044\u308B ID
-OptionPanel.outline_hgap=\u5DE6\u53F3\u306E\u9593\u9694(\u30D4\u30AF\u30BB\u30EB)
-OptionPanel.outline_vgap=\u4E0A\u4E0B\u306E\u9593\u9694(\u30D4\u30AF\u30BB\u30EB)
+OptionPanel.outline_hgap=\u5DE6\u53F3\u306E\u9593\u9694
+OptionPanel.outline_vgap=\u4E0A\u4E0B\u306E\u9593\u9694
+OptionPanel.oval=\u6955\u5186
 OptionPanel.paint_connectors_behind=\u30B3\u30CD\u30AF\u30BF\u306E\u8868\u793A\u3092\u30CE\u30FC\u30C9\u306E\u80CC\u5F8C\u306B
 OptionPanel.parse_data=\u6570\u5024\u3084\u65E5\u6642\u306E\u5165\u529B\u3092\u8A8D\u8B58
 OptionPanel.parse_data.tooltip=\u65E5\u4ED8\u3001\u6642\u523B\u4ED8\u304D\u65E5\u4ED8\u3001\u53CA\u3073\u6570\u5024\u306E\u5165\u529B\u3092\u89E3\u6790\u3057\u3001\u6A19\u6E96\u66F8\u5F0F\u306E\u9069\u7528\u3092\u8A66\u307F\u307E\u3059\u3002\u8868\u793A\u4F8B\uFF1A 100,000.00\u300112/31\u3001 12/31/99\u3001 1999-12-31\u30011999-12-31 23:59
@@ -1258,6 +1267,7 @@ OptionPanel.single_instance_force.tooltip=\u8AAD\u307F\u8FBC\u307F\u30D5\u30A1\u
 OptionPanel.sk=\u30B9\u30ED\u30D0\u30AD\u30A2\u8A9E\uFF0Fsloven\u010Dina
 OptionPanel.sl=\u30B9\u30ED\u30D9\u30CB\u30A2\u8A9E\uFF0Fsloven\u0161\u010Dina
 OptionPanel.slow_scroll_selected_node=\u9078\u629E\u30CE\u30FC\u30C9\u3092\u4E2D\u592E\u306B\u3059\u308B\u5834\u5408\u3001\u3086\u3063\u304F\u308A\u30B9\u30AF\u30ED\u30FC\u30EB
+OptionPanel.small_bubble=\u5C0F\u3055\u306A\u56F2\u307F
 OptionPanel.spelling_opt_case_sensitive=\u5927\u6587\u5B57\uFF0F\u5C0F\u6587\u5B57\u3092\u533A\u5225
 OptionPanel.spelling_opt_ignore_all_caps_words=\u5927\u6587\u5B57\u306E\u307F\u306E\u8A9E\u3092\u7121\u8996
 OptionPanel.spelling_opt_ignore_capitalization=\u8A9E\u306E\u5192\u982D\u306B\u3042\u308B\u5927\u6587\u5B57\u3092\u7121\u8996
@@ -1317,6 +1327,7 @@ OptionPanel.validate_invalid_number_format=\u6570\u5024\u306E\u6A19\u6E96\u66F8\
 OptionPanel.validate_write_without_read=\u30B9\u30AF\u30EA\u30D7\u30C8\uFF1A\u30D5\u30A1\u30A4\u30EB\u66F8\u304D\u8FBC\u307F\u306E\u4ED6\u306B\u3001\u30D5\u30A1\u30A4\u30EB\u8AAD\u307F\u8FBC\u307F\u3092\u4ED8\u52A0\u3059\u308B\u304B\u3069\u3046\u304B\u691C\u8A0E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 OptionPanel.validation_error=<html><body>\u691C\u8A3C\u30A8\u30E9\u30FC\uFF1A<p><em>{0}</em><p>\u74B0\u5883\u8A2D\u5B9A\u3092\u5909\u66F4\u3057\u3066\u30A8\u30E9\u30FC\u3092\u662F\u6B63\u3057\u3066\u304F\u3060\u3055\u3044\u3002</body></html>
 OptionPanel.validation_warning=<html><body>\u691C\u8A3C\u8B66\u544A\uFF1A<p><em>{0}</em></body></html>
+OptionPanel.vertical_child_gap=\u5B50\u30CE\u30FC\u30C9\u306E\u9593\u9694
 OptionPanel.vertical_child_gap.tooltip=\u5B50\u30CE\u30FC\u30C9\u9593\u306E\u4E0A\u4E0B\u306E\u9593\u9694
 OptionPanel.vi=\u30D9\u30C8\u30CA\u30E0\u8A9E\uFF0FTi\u1EBFng Vi\u1EC7t
 OptionPanel.wheel_velocity=\u52A0\u901F\u5EA6
@@ -1465,9 +1476,11 @@ save_unsaved_styles=\u30B9\u30BF\u30A4\u30EB\u3092\u4FDD\u5B58\u3057\u307E\u3059
 SaveAcceleratorPresetsAction.text=\u30DB\u30C3\u30C8\u30AD\u30FC\u30BB\u30C3\u30C8\u3092\u4FDD\u5B58...
 SaveAction.text=\u30DE\u30C3\u30D7\u3092\uFF08\u4E0A\u66F8\u304D\uFF09\u4FDD\u5B58(&S)
 SaveAction_readonlyMsg=\u3053\u306E\u30DE\u30C3\u30D7\u306F\u8AAD\u307F\u53D6\u308A\u5C02\u7528\u3067\u3059\u3002\u3053\u306E\u30DE\u30C3\u30D7\u3092\u4FDD\u5B58\u3059\u308B\u306B\u306F\u300C\u30D5\u30A1\u30A4\u30EB\u2192\u540D\u524D\u3092\u4ED8\u3051\u3066\u4FDD\u5B58...\u300D\u3092\u4F7F\u3063\u3066\u304F\u3060\u3055\u3044\u3002
+SaveAction_readonlyTitle=\u8AAD\u307F\u8FBC\u307F\u5C02\u7528\u306E\u30DE\u30C3\u30D7\u3092\u4FDD\u5B58\u3057\u3088\u3046\u3068\u3057\u3066\u3044\u307E\u3059
 SaveAll.text=\u3059\u3079\u3066\u306E\u30DE\u30C3\u30D7\u3092\u4FDD\u5B58(&L)
 SaveAll.tooltip=\u958B\u3044\u3066\u3044\u308B\u30DE\u30C3\u30D7\u3092\u3059\u3079\u3066\u4FDD\u5B58\u3057\u307E\u3059\u3002
 SaveAs_toReadonlyMsg={0} \u306F\u8AAD\u307F\u53D6\u308A\u5C02\u7528\u3067\u3059\u3002\u7570\u306A\u308B\u30D5\u30A1\u30A4\u30EB\u306B\u4FDD\u5B58\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+SaveAs_toReadonlyTitle=\u8AAD\u307F\u8FBC\u307F\u5C02\u7528\u306E\u30DE\u30C3\u30D7\u3078\u4FDD\u5B58\u3057\u3088\u3046\u3068\u3057\u3066\u3044\u307E\u3059
 SaveAsAction.text=\u540D\u524D\u3092\u4ED8\u3051\u3066\u30DE\u30C3\u30D7\u3092\u4FDD\u5B58(&A)...
 saved=\u4FDD\u5B58\u3057\u307E\u3057\u305F
 saving_canceled=\u4FDD\u5B58\u3092\u4E2D\u6B62
@@ -1749,6 +1762,11 @@ summary_not_possible=\u73FE\u5728\u306E\u9078\u629E\u72B6\u6CC1\u3067\u306F\u300
 SummaryNodeAction.text=\u307E\u3068\u3081\u30CE\u30FC\u30C9\u306B\u6307\u5B9A\uFF0F\u89E3\u9664
 svg=SVG
 template_dir=\u6A19\u6E96\u30C6\u30F3\u30D7\u30EC\u30FC\u30C8
+TextAlignAction.CENTER.text=\u4E2D\u592E\u63C3\u3048
+TextAlignAction.DEFAULT.text=\u898F\u5B9A\u5024
+TextAlignAction.LEFT.text=\u5DE6\u63C3\u3048
+TextAlignAction.RIGHT.text=\u53F3\u63C3\u3048
+textalignment=\u6587\u5B57\u63C3\u3048
 TimeListAction.text=\u30BF\u30B9\u30AF\u3092\u7BA1\u7406...
 TimeListAction.tooltip=\u3059\u3079\u3066\u306E\u30B9\u30B1\u30B8\u30E5\u30FC\u30EB\u3068\u95A2\u9023\u30CE\u30FC\u30C9\u3092\u8868\u793A
 TimeManagementAction.text=\u6642\u9593\u3092\u7BA1\u7406...
