--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -871,7 +871,13 @@ NodeExtensions.RemoveNodeExtensions=\u79FB\u9664\u7BC0\u9EDE\u5EF6\u4F38\u6027\u
 NodeListAction.text=\u5728\u5FC3\u667A\u5716\u7684\u7BC0\u9EDE\u5217\u8868\u4E2D\u5C0B\u627E\u6216\u53D6\u4EE3 ...
 NodeListAction.tooltip=\u986F\u793A\u6240\u6709\u7BC0\u9EDE\u7684\u5217\u8868, \u53EF\u5C0B\u627E\u6216\u53D6\u4EE3\u7BC0\u9EDE\u5167\u5BB9.
 NodeShapeAction.bubble.text=(&B)\u7BC0\u9EDE\u5916\u89C0\u6539\u6210\u6C23\u6CE1\u6846
+NodeShapeAction.circle.text=\u5713\u5708
 NodeShapeAction.fork.text=(&F)\u7BC0\u9EDE\u5916\u89C0\u6539\u6210\u5E95\u7DDA
+NodeShapeAction.narrow_hexagon.text=\u72F9\u7A84\u516D\u89D2\u5F62
+NodeShapeAction.oval.text=\u6A62\u5713\u5F62
+NodeShapeAction.small_bubble.text=\u5C0F\u6C23\u6CE1
+NodeShapeAction.small_wide_hexagon.text=\u5C0F\u516D\u89D2\u5F62
+NodeShapeAction.wide_hexagon.text=\u5BEC\u516D\u89D2\u5F62
 NodeUpAction.text=\u5C07\u7BC0\u9EDE\u79FB\u5230\u4E0A\u65B9
 nonboldify_branch=\u53D6\u6D88\u7C97\u9AD4
 nonitalicise_branch=\u53D6\u6D88\u659C\u9AD4
@@ -935,6 +941,7 @@ OptionPanel.center_selected_node=\u5C07\u9078\u53D6\u7684\u7BC0\u9EDE\u7F6E\u65B
 OptionPanel.check_updates_automatically=\u7A0B\u5F0F\u555F\u52D5\u6642\u6AA2\u67E5\u662F\u5426\u6709\u65B0\u7248\u672C
 OptionPanel.childpattern=\u5B50\u6A23\u677F
 OptionPanel.childpattern.tooltip=\u9078\u5B9A\u7684\u6A21\u677F\u5957\u7528\u5230\u6240\u6709\u5B50\u7BC0\u9EDE\u3002
+OptionPanel.circle=\u5713\u5708
 OptionPanel.clear_all_setters=\u91CD\u8A2D\u6240\u6709\u8A2D\u5B9A
 OptionPanel.clear_all_setters.tooltip=\u555F\u7528\u6216\u505C\u7528\u6240\u6709\u66F4\u6539\u6A19\u793A\u3002
 OptionPanel.cloud=\u96F2\u72C0\u5305\u8986
@@ -1093,6 +1100,7 @@ OptionPanel.max_shortened_text_length=\u6700\u5927\u6587\u5B57\u5BEC\u5EA6
 OptionPanel.metal=\u91D1\u5C6C
 OptionPanel.min_node_width=\u6700\u5C0F\u7BC0\u9EDE\u5BEC\u5EA6
 OptionPanel.motif=\u6A21\u9AD4
+OptionPanel.narrow_hexagon=\u72F9\u7A84\u516D\u89D2\u5F62
 OptionPanel.nb=Norsk Bokm\u00E5l (\u632A\u5A01\u5DF4\u514B\u6469\u6587)
 OptionPanel.never_save_folding=\u7D55\u4E0D
 OptionPanel.nl=Nederlands / Vlaams (\u8377\u862D\u6587 / \u4F5B\u862D\u8292\u6587)
@@ -1127,6 +1135,7 @@ OptionPanel.org.freeplane.plugin.bugreport.denied=\u6C38\u4E0D\u50B3\u9001
 OptionPanel.org.freeplane.plugin.bugreport.userid=\u50B3\u9001\u53EF\u9078\u8B58\u5225\u78BC
 OptionPanel.outline_hgap=\u6C34\u5E73\u9593\u8DDD
 OptionPanel.outline_vgap=\u5782\u76F4\u9593\u8DDD
+OptionPanel.oval=\u6A62\u5713\u5F62
 OptionPanel.paint_connectors_behind=\u9023\u7D50\u7DDA\u5728\u7BC0\u9EDE\u4E0B\u9762
 OptionPanel.parse_data=\u8FA8\u8A8D\u8F38\u5165\u4E2D\u7684\u6578\u5B57\u548C\u65E5\u671F-\u6642\u9593
 OptionPanel.parse_data.tooltip=\u8A66\u8457\u89E3\u6790\u65E5\u671F\uFF0C\u65E5\u671F-\u6642\u9593\u548C\u6578\u5B57\u8F38\u5165\u4E26\u5957\u7528\u6A19\u6E96\u683C\u5F0F\u3002\u4F8B\u5982\uFF1A100,000.00\u300112/31\u300112/31/99\u30011999-12-31 \u548C  1999-12-31 23:59
@@ -1266,6 +1275,8 @@ OptionPanel.single_instance_force.tooltip=\u907F\u514D Freeplane \u7A0B\u5F0F\u9
 OptionPanel.sk=Sloven\u010Dina (\u65AF\u6D1B\u4F10\u514B\u6587)
 OptionPanel.sl=Sloven\u0161\u010Dina (\u65AF\u6D1B\u7DAD\u5C3C\u4E9E\u6587)
 OptionPanel.slow_scroll_selected_node=\u7DE9\u6162\u6372\u52D5\u5230\u5DF2\u9078\u7BC0\u9EDE
+OptionPanel.small_bubble=\u5C0F\u6C23\u6CE1
+OptionPanel.small_wide_hexagon=\u5C0F\u516D\u89D2\u5F62
 OptionPanel.spelling_opt_case_sensitive=\u5340\u5206\u5927\u5C0F\u5BEB
 OptionPanel.spelling_opt_ignore_all_caps_words=\u5FFD\u7565\u5168\u5927\u5BEB\u7684\u5B57\u3002
 OptionPanel.spelling_opt_ignore_capitalization=\u5FFD\u7565\u5B57\u958B\u982D\u7684\u5927\u5BEB\u5B57\u6BCD
@@ -1330,6 +1341,7 @@ OptionPanel.vertical_child_gap.tooltip=\u5728\u5B50\u7BC0\u9EDE\u4E4B\u9593\u768
 OptionPanel.vi=Ti\u1EBFng Vi\u1EC7t (\u8D8A\u5357\u6587)
 OptionPanel.wheel_velocity=\u901F\u5EA6
 OptionPanel.wheel_velocity.tooltip=\u503C\u8D8A\u5927\uFF0C\u6ED1\u9F20\u6EFE\u8F2A\u5728\u5716\u4E0A\u79FB\u52D5\u7684\u6548\u61C9\u8D8A\u5FEB\u3002
+OptionPanel.wide_hexagon=\u5BEC\u516D\u89D2\u5F62
 OptionPanel.windows=\u8996\u7A97
 OptionPanel.zh_CN=\u7C21\u9AD4\u4E2D\u6587
 OptionPanel.zh_TW=\u6B63\u9AD4\u4E2D\u6587
