--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -870,6 +870,7 @@ NodeListAction.tooltip=Shows all nodes as a searchable list with filter properti
 NodeShapeAction.bubble.text=&Bubble
 NodeShapeAction.circle.text=Circle
 NodeShapeAction.fork.text=&Fork
+NodeShapeAction.hexagon.text=Hexagon
 NodeShapeAction.narrow_hexagon.text=Narrow hexagon
 NodeShapeAction.oval.text=Oval
 NodeShapeAction.small_bubble.text=Small bubble
@@ -1034,6 +1035,7 @@ OptionPanel.groovy_editor_font=Font for Groovy Syntax Highlighting Editor
 OptionPanel.groovy_editor_font.tooltip=Use 'Dialog' or 'Monospaced' if you need unicode chars!
 OptionPanel.groovy_editor_font_size=Font size for Groovy Syntax Highlighting Editor
 OptionPanel.gtk=Gtk
+OptionPanel.hexagon=Hexagon
 OptionPanel.hide_edge=Hide edge
 OptionPanel.highlight_formulas=Highlight formulas
 OptionPanel.horizontal=Horizontal
