--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -871,7 +871,11 @@ NodeListAction.tooltip=Poka\u017Ei sve \u010Dvorove kao pretra\u017Eiv popis sa 
 NodeShapeAction.bubble.text=&Mjehuri\u0107
 NodeShapeAction.circle.text=Krug
 NodeShapeAction.fork.text=Ra&\u010Dva
+NodeShapeAction.narrow_hexagon.text=Uski \u0161esterokut
+NodeShapeAction.oval.text=Oval
 NodeShapeAction.small_bubble.text=Mali mjehuri\u0107
+NodeShapeAction.small_wide_hexagon.text=Mali \u0161esterokut
+NodeShapeAction.wide_hexagon.text=\u0160iroki \u0161esterokut
 NodeUpAction.text=\u010Cvor gore
 nonboldify_branch=Poni\u0161ti podebljanje
 nonitalicise_branch=Poni\u0161ti uko\u0161enost
@@ -1094,6 +1098,7 @@ OptionPanel.max_shortened_text_length=Maksimalna duljina smanjenog \u010Dvora
 OptionPanel.metal=Metal
 OptionPanel.min_node_width=Minimalna \u0161irina \u010Dvora
 OptionPanel.motif=Motif
+OptionPanel.narrow_hexagon=Uski \u0161esterokut
 OptionPanel.nb=Norve\u0161ki (Bokm\u00E5l)
 OptionPanel.never_save_folding=Nikad ne spremaj
 OptionPanel.nl=Nizozemski
@@ -1128,6 +1133,7 @@ OptionPanel.org.freeplane.plugin.bugreport.denied=Nikad ne \u0161alji
 OptionPanel.org.freeplane.plugin.bugreport.userid=Proizvoljnja identifikacija po\u0161iljatelja
 OptionPanel.outline_hgap=Vodoravni razmak
 OptionPanel.outline_vgap=Okomiti razmak
+OptionPanel.oval=Ovali
 OptionPanel.paint_connectors_behind=Crtaj poveznik iza \u010Dvorova
 OptionPanel.parse_data=Prepoznaj unos brojeva, datuma i vremena
 OptionPanel.parse_data.tooltip=Program analizira unos datuma, datuma-vremena i brojeva i primjenjuje standarde formate. Prijmeri: 100,000.00, 12/31, 12/31/99, 1999-12-31 and 1999-12-31 23:59
@@ -1268,6 +1274,7 @@ OptionPanel.sk=Slova\u010Dki
 OptionPanel.sl=Slovenski
 OptionPanel.slow_scroll_selected_node=Sporo pomicanje do odabranog \u010Dvora
 OptionPanel.small_bubble=Mali mjehuri\u0107
+OptionPanel.small_wide_hexagon=Mali \u0161esterokut
 OptionPanel.spelling_opt_case_sensitive=Osjetljiv na veli\u010Dinu (slova)
 OptionPanel.spelling_opt_ignore_all_caps_words=Zanemari rije\u010Di pisane VELIKIM SLOVIMA.
 OptionPanel.spelling_opt_ignore_capitalization=Zanemari VELIKA SLOVA na po\u010Detku rije\u010Di
@@ -1332,6 +1339,7 @@ OptionPanel.vertical_child_gap.tooltip=Okomiti razmak izme\u0111u \u010Dvorova D
 OptionPanel.vi=Vijetnamski
 OptionPanel.wheel_velocity=Brzina
 OptionPanel.wheel_velocity.tooltip=Ve\u0107a vrijednost rezultira kod pomaka kota\u010Di\u0107a mi\u0161a br\u017Ee u\u010Dinke na mapi.
+OptionPanel.wide_hexagon=\u0160iroki \u0161esterokut
 OptionPanel.windows=Windows
 OptionPanel.zh_CN=Kineski, pojednostavljeno
 OptionPanel.zh_TW=Kineski, tradicionalno
@@ -1756,6 +1764,7 @@ styles.subtopic=Podtema
 styles.topic=Glavna tema
 styles.user-defined=Korisni\u010Dki definirani stilovi
 styles.website=WEB stranica
+styles_background_html=\n <html>\n <head>\n </head>\n <body>\n <table width="800" style="text-align: left; vertical-align: top">\n <tr valign="top">\n <th>\n <div style="margin-top: 0pt; margin-right: 0pt; margin-bottom: 0pt; margin-left: 0pt; text-align: center; font-weight: bold">\n About this style set\n </div>\n <div style="text-align: left; font-weight: normal">\n <div style="margin: 3pt">\n Ovaj standard je razvijen nakon 11 godina pedago\u0161kog istra\u017Eivanja kako proces usvajanja znanja u\u010Diniti jednostavnijim i br\u017Eim.\n </div>\n <div style="margin: 3pt">\n It aims to make the process of assimilating, processing, absorbing, understanding domain and mastering knowledge, information and ideas as fast and easy as possible.\n </div>\n <div style="margin: 3pt">\nRazvijeno od Jonas Batista (Brazil).\nVi\u0161e informacija na: <a href="http://www.jonasbatista.com.br/">www.jonasbatista.com.br/ </a>\n </div>\n </div>\n </th>\n <th>\n <img src="freeplaneresource:/images/JonasBatista.jpg"/>\n <div style="text-align: center">\n Jonas Batista<br/>\n </div>\n </th>\n </tr>\n </table>\n </body>\n </html>
 styles_menu=Stilovi
 submenu_keystroke_in_use_error=Tipkovni\u010Da kratica {0} nemo\u017Ee biti kori\u0161tena za podizbornik {1}. Tipkovni\u010Dka kratica je maknuta.
 summary_nodes=\u010Cvorovi sa\u017Eetak
