--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -874,7 +874,11 @@ NodeListAction.tooltip=Mostra todos os n\u00F3s como lista para procura com prop
 NodeShapeAction.bubble.text=&Bolha
 NodeShapeAction.circle.text=C\u00EDrculo
 NodeShapeAction.fork.text=Bi&furca\u00E7\u00E3o
+NodeShapeAction.narrow_hexagon.text=Hex\u00E1gono estreito
+NodeShapeAction.oval.text=Oval
 NodeShapeAction.small_bubble.text=Bolha pequena
+NodeShapeAction.small_wide_hexagon.text=Hex\u00E1gono pequeno
+NodeShapeAction.wide_hexagon.text=Hex\u00E1gono largo
 NodeUpAction.text=Mover n\u00F3 para cima
 nonboldify_branch=Anular Negrito
 nonitalicise_branch=Anular It\u00E1lico
@@ -1098,6 +1102,7 @@ OptionPanel.max_shortened_text_length=Largura m\u00E1xima de texto abreviado
 OptionPanel.metal=Metal
 OptionPanel.min_node_width=Largura m\u00EDnima do n\u00F3
 OptionPanel.motif=Motif
+OptionPanel.narrow_hexagon=Hex\u00E1gono estreito
 OptionPanel.nb=Noruegu\u00EAs Bokm\u00E5l / Norsk bokm\u00E5l
 OptionPanel.never_save_folding=Nunca
 OptionPanel.nl=Holand\u00EAs, Flandres / Nederlands, Vlaams
@@ -1132,6 +1137,7 @@ OptionPanel.org.freeplane.plugin.bugreport.denied=Nunca enviar
 OptionPanel.org.freeplane.plugin.bugreport.userid=Identificador opcional a enviar
 OptionPanel.outline_hgap=Dist\u00E2ncia horizontal
 OptionPanel.outline_vgap=Dist\u00E2ncia vertical
+OptionPanel.oval=Oval
 OptionPanel.paint_connectors_behind=Pintar liga\u00E7\u00F5es atr\u00E1s dos n\u00F3s
 OptionPanel.parse_data=Reconhecer introdu\u00E7\u00E3o de n\u00FAmeros e data/hora
 OptionPanel.parse_data.tooltip=Tentar detetar data, data/hora e n\u00FAmeros e aplicar formatos padr\u00E3o. Exemplos: 100.000,00, 12/31, 12/31/99, 1999-12-31 e 1999-12-31 12:55
@@ -1272,6 +1278,7 @@ OptionPanel.sk=Eslovaco / sloven\u010Dina
 OptionPanel.sl=Esloveno / sloven\u0161\u010Dina
 OptionPanel.slow_scroll_selected_node=Deslocar lentamente para o n\u00F3 selecionado
 OptionPanel.small_bubble=Bolha pequena
+OptionPanel.small_wide_hexagon=Hex\u00E1gono pequeno
 OptionPanel.spelling_opt_case_sensitive=Distinguir mai\u00FAsculas/min\u00FAsculas
 OptionPanel.spelling_opt_ignore_all_caps_words=Ignorar palavras em mai\u00FAsculas.
 OptionPanel.spelling_opt_ignore_capitalization=Ignorar mai\u00FAsculas no princ\u00EDpio da palavra
@@ -1336,6 +1343,7 @@ OptionPanel.vertical_child_gap.tooltip=Dist\u00E2ncia vertical entre n\u00F3s-fi
 OptionPanel.vi=Vietnamita / Ti\u1EBFng Vi\u1EC7t
 OptionPanel.wheel_velocity=Velocidade
 OptionPanel.wheel_velocity.tooltip=Um valor alto resulta num mais r\u00E1pido efeito dos movimentos da roda do rato no mapa.
+OptionPanel.wide_hexagon=Hex\u00E1gono largo
 OptionPanel.windows=Windows
 OptionPanel.zh_CN=Chin\u00EAs, simplificado / \u7B80\u4F53\u5B57
 OptionPanel.zh_TW=Chin\u00EAs, tradicional / \u7E41\u9AD4\u5B57
